syntax = "proto3";
package activeReplication;
option go_package = "proto/proto";

service IncrementService {
    rpc Increment(IncRequest) returns (incResponse){}
}

message IncRequest {
    int32 amount = 1;
}

message incResponse {
    int32 amount = 1;
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/proto.protoprotoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto
//go mod tidy